--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
-envlist=py27,py34,py35
+envlist=py35,py36
 skip_missing_interpreters=True
 
 [testenv]
 deps=-rrequirements.txt
-commands=nosetests {posargs:tests}
-whitelist_externals=make
+commands=pytest {posargs}
