upgrade deps, fix missing latest, switch to poetry

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
-envlist=py27,py35,py36
-skip_missing_interpreters=True
+requires = tox>=4
+env_list=py{38,39,310,py311}
 
 [testenv]
+description = run some tests
 deps=-rrequirements.txt
 commands=pytest {posargs}
